Fixed color overlap on selected cells

--- a/css/main.css
+++ b/css/main.css
@@ -147,12 +147,15 @@ h1 {
 	background: var(--accent-color);
 	border: 1px dashed var(--accent-color);
 	color: #fff;
+	margin-right: 0;
+	margin-bottom: 0;
 }
 
 .cells:nth-child(7n+1).selected,
 .cells:nth-child(7n+7).selected {
 	color: #fff;
 }
+
 
 .year-container {
 	margin-bottom: 175px;
@@ -220,8 +223,8 @@ footer {
 		font-size: .9rem;
 		padding: 3px;
 	}
-	
+
 	footer {
-	height: 8vh;
-}
+		height: 8vh;
+	}
 }
